Remove direct dep from chromeos/login/auth on tpm_util.

Instead, use InstallAttributes.
InstallAttributes is the better high-level interface to use and it
can easily be stubbed during a test.

Bug: 836857
Change-Id: I2910aaeb0c86dcab47bb74e42d46671afe92630c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1541057
Commit-Queue: A Olsen <olsen@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Roman Sorokin [CET] <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#645381}
Former-commit-id: 523a8c0ba6af23dee323245fe4696350c6626f52