chrome/browser/chromeos/login/active_directory_login_browsertest.cc
@@ -28,7 +28,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/test/base/interactive_test_utils.h"
 #include "chromeos/constants/chromeos_switches.h"
 #include "chromeos/dbus/auth_policy/fake_auth_policy_client.h"
-#include "chromeos/dbus/cryptohome/tpm_util.h"
 #include "chromeos/dbus/dbus_thread_manager.h"
 #include "components/account_id/account_id.h"
 #include "components/user_manager/user_names.h"
@@ -322,7 +321,7 @@ class ActiveDirectoryLoginAutocompleteTest : public ActiveDirectoryLoginTest {
 
 // Test successful Active Directory login.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest, LoginSuccess) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   TestNoError();
   TestDomainHidden();
   content::WindowedNotificationObserver session_start_waiter(
@@ -334,7 +333,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest, LoginSuccess) {
 
 // Test different UI errors for Active Directory login.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest, LoginErrors) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   SetupActiveDirectoryJSNotifications();
   TestNoError();
   TestDomainHidden();
@@ -378,7 +377,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest, LoginErrors) {
 // Test successful Active Directory login from the password change screen.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
                                 PasswordChange_LoginSuccess) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   TestLoginVisible();
   TestDomainHidden();
 
@@ -397,7 +396,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
 // Test different UI errors for Active Directory password change screen.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
                                 PasswordChange_UIErrors) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   TestLoginVisible();
   TestDomainHidden();
 
@@ -430,7 +429,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
 // Test reopening Active Directory password change screen clears errors.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
                                 PasswordChange_ReopenClearErrors) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   TestLoginVisible();
   TestDomainHidden();
 
@@ -448,7 +447,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginTest,
 // Tests that autocomplete works. Submits username without domain.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginAutocompleteTest,
                                 LoginSuccess) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   TestNoError();
   TestDomainVisible();
 
@@ -462,7 +461,7 @@ IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginAutocompleteTest,
 // Tests that user could override autocomplete domain.
 IN_PROC_BROWSER_TEST_F_WITH_PRE(ActiveDirectoryLoginAutocompleteTest,
                                 TestAutocomplete) {
-  ASSERT_TRUE(tpm_util::IsActiveDirectoryLocked());
+  ASSERT_TRUE(InstallAttributes::Get()->IsActiveDirectoryManaged());
   SetupActiveDirectoryJSNotifications();
 
   TestLoginVisible();
